<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="260dp"
    android:layout_height="140dp"
    android:background="@drawable/dialog_rounded_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enterFolderName"
            android:maxLines="1"
            android:maxLength="70"
            android:textColorHint="@color/secondary_text"
            android:textColor="@color/colorAccent"
            android:id="@+id/txtFolderName"
            android:textSize="15dp"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/btnCancel">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/cancel_btn_bg"
                android:textColor="@color/colorWhiteDark"
                android:textSize="13dp"
                android:text="@string/cancel"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/btnAdd">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/txtAdd"
                android:background="@drawable/add_btn_bg"
                android:textColor="@color/colorWhiteDark"
                android:textSize="13dp"
                android:text="@string/add"/>

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>