<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="400dp"
    android:background="@drawable/dialog_rounded_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@drawable/toolbar_rounded_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:textSize="13dp"
            android:textColor="@color/colorWhiteDark"
            android:text="@string/selectFolderTooAdd"
            />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lstFoldersToAdd"></android.support.v7.widget.RecyclerView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNoFolderFound"
            android:layout_centerInParent="true"
            android:textColor="@color/secondary_text"
            android:textSize="16dp"
            android:text="@string/noFolderFound"
            android:visibility="gone"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/btnCancel">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/cancel_btn_bg_rounded"
                android:textColor="@color/colorWhiteDark"
                android:textSize="13dp"
                android:text="@string/cancel"/>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>