<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueUltraLight"
    android:id="@+id/coordinatorContainer">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">


                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <ImageView
                        android:id="@+id/btnOpenDrawer"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="1dp"
                        android:src="@drawable/ic_menu" />


                    <TextView
                        android:id="@+id/title"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/app_name"
                        android:ellipsize="marquee"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:lines="1"
                        android:fadingEdge="horizontal"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"/>

                </android.support.v7.widget.Toolbar>


            </android.support.design.widget.AppBarLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/lstNotes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/appBar"
                android:padding="2dp"></android.support.v7.widget.RecyclerView>


            <ImageView
                android:id="@+id/imgNotFound"
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:layout_centerInParent="true"
                android:visibility="gone"/>



        </RelativeLayout>




    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="@color/colorPrimary"
        fab:menu_colorRipple="@color/divider"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#39000000"
        fab:menu_shadowRadius="2dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="1dp"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/itemNewNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorPrimaryDark"
            fab:fab_label="@string/newNote"
            fab:fab_size="mini"
            fab:menu_colorPressed="@color/colorPrimaryDark" />


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/itemNewVisualNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorPrimaryDark"
            fab:fab_label="@string/newVisualNote"
            fab:fab_size="mini"
            fab:menu_colorPressed="@color/colorPrimaryDark" />

    </com.github.clans.fab.FloatingActionMenu>


</android.support.design.widget.CoordinatorLayout>
